# web_search_util

./: .env_template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/web_search_util/api/: api_server.py
src/web_search_util/core/: search_wikipedia.py  web_util.py
src/web_search_util/log/: log_settings.py
src/web_search_util/mcp/: mcp_server.py
src/web_search_util/web/: search_wikipedia_ja.py  web_util.py
